# claude-env

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/agents/: python-code-auditor.md
.github/workflows/: ci.yml  publish.yml
docs/: SECURITY.md  usage.md
docs/plans/: 2025-11-11-production-hardening.md  2025-11-11-production-readiness-fixes.md  2025-11-12-achieve-a-plus-grade.md  2025-11-12-code-review-fixes.md  2025-11-12-excellence-roadmap.md  2025-12-12-publish-command-design.md  2025-12-12-publish-command.md  2025-12-26-path-portability.md
scripts/: test-path-portability.sh
src/cenv/: __init__.py  cli.py  config.py  core.py  exceptions.py  github.py  logging_config.py  path_portability.py  platform_utils.py  process.py  publish.py  validation.py
tests/: test_api_exports.py  test_cli_create.py  test_cli_errors.py  test_cli_init.py  test_cli_list.py  test_cli_publish.py  test_cli_use.py  test_cli_validation.py  test_config.py  test_contributing.py  test_core.py  test_create.py  test_delete.py  test_edge_cases.py  test_environment_detection.py  test_exception_handling.py  test_exceptions.py  test_github.py  test_imports.py  test_init.py  test_integration.py  test_license.py  test_logging.py  test_path_portability.py  test_platform.py  test_process.py  test_publish.py  test_security.py  test_switch.py  test_validation.py
thoughts/shared/designs/: 2025-12-26-path-portability-design.md
