[project]
name = "claude-env"
version = "0.1.0"
description = "Claude environment manager - switch between Claude Code configurations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cenv contributors", email = "contributors@cenv.io"}
]
keywords = ["claude", "environment", "cli", "devtools", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "click>=8.1.0,<9.0.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/vtemian/claude-env"
Documentation = "https://github.com/vtemian/claude-env#readme"
Repository = "https://github.com/vtemian/claude-env"
"Bug Tracker" = "https://github.com/vtemian/claude-env/issues"
Changelog = "https://github.com/vtemian/claude-env/blob/main/CHANGELOG.md"

[project.scripts]
cenv = "cenv.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cenv"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "types-psutil>=5.9.0",
    "ruff>=0.1.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "click"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cenv.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length to match project standard
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), unused imports (F401)
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (includes unused imports F401, undefined names F821)
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernize Python code)
]

# Never auto-fix unused imports (we want to review them)
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (re-exports)
"__init__.py" = ["F401"]
